<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/swiperefresh"
    tools:context="com.mytechstudy.bitcoinpricenews.AllCoinsFragment">

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardBackgroundColor="#ffebc0"
        app:cardCornerRadius="2dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:src="@mipmap/bitcoin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bitcoin"
                android:textStyle="bold"
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_marginStart="10dp"
                android:textColor="#e4910c"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:gravity="end"
                android:text="@string/zero"
                android:id="@+id/bitprice"
                style="@style/Base.TextAppearance.AppCompat.Large"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_margin="5dp"
                    android:id="@+id/allbtcup"
                    android:src="@mipmap/arrowup"
                    android:scaleType="centerCrop"
                    />
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_margin="5dp"
                    android:id="@+id/allbtcdown"
                    android:src="@mipmap/arrowdown"/>

            </LinearLayout>



        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardBackgroundColor="#c9ffc0"
        app:cardCornerRadius="2dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:src="@mipmap/ethereum"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ethereum"
                android:textStyle="bold"
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_marginStart="10dp"
                android:textColor="#154805"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:gravity="end"
                android:text="000"
                android:id="@+id/ethereumprice"
                style="@style/Base.TextAppearance.AppCompat.Large"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_margin="5dp"
                    android:id="@+id/allethup"
                    android:src="@mipmap/arrowup"
                    android:scaleType="centerCrop"
                    />
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_margin="5dp"
                    android:id="@+id/allethdown"
                    android:src="@mipmap/arrowdown"/>

            </LinearLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardBackgroundColor="#ffc0cf"
        app:cardCornerRadius="2dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:src="@mipmap/litecoin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/litecoin"
                android:textStyle="bold"
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_marginStart="10dp"
                android:textColor="#e40c2c"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:gravity="end"
                android:text="@string/zero"
                android:id="@+id/litecoinprice"
                style="@style/Base.TextAppearance.AppCompat.Large"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_margin="5dp"
                    android:id="@+id/allltcup"
                    android:src="@mipmap/arrowup"
                    android:scaleType="centerCrop"
                    />
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_margin="5dp"
                    android:id="@+id/allltcdown"
                    android:src="@mipmap/arrowdown"/>

            </LinearLayout>



        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardBackgroundColor="#c0c1ff"
        app:cardCornerRadius="2dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:src="@mipmap/ripple"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ripple"
                android:textStyle="bold"
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_marginStart="10dp"
                android:textColor="#0c10e4"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:gravity="end"
                android:text="@string/zero"
                android:id="@+id/rippleprice"
                style="@style/Base.TextAppearance.AppCompat.Large"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_margin="5dp"
                    android:id="@+id/allxrpup"
                    android:src="@mipmap/arrowup"
                    android:scaleType="centerCrop"
                    />
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_margin="5dp"
                    android:id="@+id/allxrpdown"
                    android:src="@mipmap/arrowdown"/>

            </LinearLayout>



        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardBackgroundColor="#c0fff5"
        app:cardCornerRadius="2dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:src="@mipmap/dash"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dash"
                android:textStyle="bold"
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_marginStart="10dp"
                android:textColor="#09968c"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:gravity="end"
                android:text="@string/zero"
                android:id="@+id/dashprice"
                style="@style/Base.TextAppearance.AppCompat.Large"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_margin="5dp"
                    android:id="@+id/alldashup"
                    android:src="@mipmap/arrowup"
                    android:scaleType="centerCrop"
                    />
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_margin="5dp"
                    android:id="@+id/alldashdown"
                    android:src="@mipmap/arrowdown"/>

            </LinearLayout>



        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardBackgroundColor="#e6ff9c"
        app:cardCornerRadius="2dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:src="@mipmap/bitcoincash"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bitcoincash"
                android:textStyle="bold"
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_marginStart="10dp"
                android:textColor="#ac7324"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:gravity="end"
                android:text="@string/zero"
                android:id="@+id/bitcoincashprice"
                style="@style/Base.TextAppearance.AppCompat.Large"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_margin="5dp"
                    android:id="@+id/allbchup"
                    android:src="@mipmap/arrowup"
                    android:scaleType="centerCrop"
                    />
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_margin="5dp"
                    android:id="@+id/allbchdown"
                    android:src="@mipmap/arrowdown"/>

            </LinearLayout>



        </LinearLayout>
    </android.support.v7.widget.CardView>



</LinearLayout>

</ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>




